--- a/npc-prompt/build.gradle
+++ b/npc-prompt/build.gradle
@@ -1,7 +1,9 @@
+//file:noinspection GroovyAssignabilityCheck
 plugins {
 	id 'org.springframework.boot' version '2.6.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'org.siouan.frontend-jdk11' version '6.0.0'
 }
 
 group = 'com.dleinbach'
@@ -20,6 +22,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	runtimeOnly 'com.h2database:h2'
@@ -32,4 +35,12 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+frontend {
+	nodeDistributionProvided = true
+	assembleScript = 'run build'
+	cleanScript = 'run clean'
+	checkScript = 'run check'
+
 }
